# CradleMaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TERMS_OF_USE.md  THIRD_PARTY_NOTICES.md
.github/workflows/: cradlemaker-pages.yml
cradlemaker-web/: .gitignore  README.md  WASM_PORT.md  coi-serviceworker.js  index.html  server.mjs
cradlemaker-web/samples/: FullHexParametric HTD 5M - Universal v3 v3_31T.stl  LaserMastStepPlugV1.stl  LaserPlugV1.stl  TruckAntennaMount1.stl
cradlemaker-web/src/: clearanceCertificate.js  clearanceKernel.js  main.js  modelTrimWorker.js  orcaSupportOptions.js  qaWorker.js  styles.css  supportOptions.js  supportWorker.js  voxelBooleanWorker.js  wasmCore.js
cradlemaker-web/src/wasm/: cradlemaker-core-threaded.js  cradlemaker-core-threaded.wasm  cradlemaker-core.js  cradlemaker-core.wasm
cradlemaker-web/tools/: benchmark-targeted-streaming.mjs  build-manifold-parallel.ps1  build-manifold-targeted.ps1  diagnose-targeted-streaming.mjs  test-centered-mesh-inradius.mjs  test-clearance-certificate.mjs  test-clearance-kernel.mjs  test-column-taper.mjs  test-model-trim-worker-certificate.mjs  test-model-trim-worker-targeted.mjs  test-targeted-minkowski.mjs
cradlemaker-web/tools/patches/: manifold-targeted-minkowski.patch
cradlemaker-web/wasm/: CMakeLists.txt  CompatEmscriptenWrapper.cmake  CradlemakerCore.cpp  OrcaSupportBridge.cpp  OrcaSupportBridge.hpp  OrcaSupportSources.cmake  SupportCore.cpp  SupportCore.hpp  build-wasm-cmake.bat  build-wasm.bat  configure-wasm-cmake.bat  fetch-orca-support-sources.ps1
